--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,10 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
               "node_modules/ngx-toastr/toastr.css",
-              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
-
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ng-wizard/themes/ng_wizard.min.css",
+              "ng-wizard/themes/ng_wizard_theme_arrows.min.css"
             ],
             "scripts": []
           },
@@ -103,7 +105,10 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
               "node_modules/ngx-toastr/toastr.css",
-              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ng-wizard/themes/ng_wizard.min.css",
+              "ng-wizard/themes/ng_wizard_theme_arrows.min.css"
             ],
             "scripts": []
           }
