--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^14.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "@ng-select/ng-select": "^9.0.2",
+    "bootstrap": "^4.3.1",
+    "ng-wizard": "^1.3.0",
     "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^15.2.1",
     "rxjs": "~7.5.0",
