--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "@ng-select/ng-select": "^9.0.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^4.3.1",
+    "chart.js": "^3.1.1",
+    "mdb-angular-ui-kit": "^3.0.0",
     "ng-wizard": "^1.3.0",
     "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^15.2.1",
