--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "@ng-select/ng-select": "^9.0.2",
     "@popperjs/core": "^2.10.2",
+    "angular-bootstrap-modal": "^1.0.8",
     "bootstrap": "^4.3.1",
     "chart.js": "^3.1.1",
     "mdb-angular-ui-kit": "^3.0.0",
